--- a/css/home.css
+++ b/css/home.css
@@ -32,6 +32,8 @@ section {
 footer {
   height: 20rem;
   background-color: #ededed;
+  background-color: hsl(45, 3%, 24%);
+  color: white;
   padding: 1rem 4rem;
   grid-area: footer;
 }
@@ -200,5 +202,6 @@ nav > ul > li > a:hover,
   height: auto;
   object-fit: cover;
   border-radius: 8px;
-  -webkit-box-reflect: right 1em linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4)) ;
+  -webkit-box-reflect: right 1em
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
 }
