--- a/css/home.css
+++ b/css/home.css
@@ -139,7 +139,7 @@ nav > ul > li > a:hover,
   /* Chrome 10-25, Safari 5.1-6 */
   /* background: -webkit-linear-gradient(to right, #fb923c, #ededed); */
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  /* background: linear-gradient(to right, #fb923c, #ededed); */
+  background: linear-gradient(to right, #B0A49A, #ededed);
 }
 
 .hero h1 {
