--- a/css/home.css
+++ b/css/home.css
@@ -152,7 +152,7 @@ nav > ul > li > a:hover,
 }
 
 .background-mixtapes {
-  background-image: linear-gradient(hsla(0, 0%, 0%, 0.1), rgba(0, 0, 0, 0.1)),
+  background-image: linear-gradient(hsla(0, 0%, 0%, 0.5), rgba(0, 0, 0, 0.5)),
     url("/images/mixtapes.jpg");
   /* Set a specific height */
   height: 20%;
@@ -164,32 +164,33 @@ nav > ul > li > a:hover,
   display: block;
 }
 
-/* .background-mixtapes-text {
+.background-mixtapes-text {
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
-  background-color: #e4873e;
+  /* background-color: #e4873e;
   color: hsl(45, 3%, 24%);
 
   background-color: #e3b502;
   color: #ededed;
 
   background-color: #a16e31;
-  color: white;
+  color: white; */
 
-  background-color: hsl(45, 3%, 35%);
+  /* background-color: hsl(45, 3%, 35%); */
+  /* opacity: 90%; */
   color: white;
-
-  width: 18rem;
-  opacity: 90%;
-  padding: 2em 4em;
- 
+  width: 26rem;
+  padding: 2em 8em;
+  font-size: xx-large;
   font-weight: 800;
+  font-family: monospace;
+  line-height: 1.8em;
 } 
-*/
+
 
 .background-mixtapes h3 {
   text-transform: uppercase;
