--- a/css/home.css
+++ b/css/home.css
@@ -31,7 +31,7 @@ section {
 }
 
 footer {
-  height: 20rem;
+  height: 10rem;
   background-color: hsl(45, 3%, 24%);
   color: white;
   padding: 1rem 4rem;
@@ -154,7 +154,7 @@ nav > ul > li > a:hover,
 }
 
 .background-mixtapes {
-  background-image: linear-gradient(hsla(0, 0%, 0%, 0.5), rgba(0, 0, 0, 0.5)),
+  background-image: linear-gradient(hsla(0, 0%, 0%, .2), rgba(0, 0, 0, .2)),
     url("/images/mixtapes.jpg");
   /* Set a specific height */
   height: 20%;
@@ -173,20 +173,21 @@ nav > ul > li > a:hover,
   left: 50%;
   transform: translate(-50%, -50%);
 
-  /* background-color: #e4873e;
-  color: hsl(45, 3%, 24%);
+  /* background-color: #71717a;
+  color: hsl(45, 3%, 24%); */
 
-  background-color: #e3b502;
-  color: #ededed;
+  /* background-color: #e3b502;
+  color: #ededed; */
 
-  background-color: #a16e31;
-  color: white; */
+  /* background-color: #a16e31;
+  color: white;  */
 
   /* background-color: hsl(45, 3%, 35%); */
-  /* opacity: 90%; */
+  /* opacity: 80%; */
   color: #d1d5db;
+  color: #f9fafb;
   width: 26rem;
-  padding: 2em 8em;
+  padding: 0em 0em;
   font-size: xx-large;
   font-weight: 800;
   font-family: monospace;
@@ -198,7 +199,7 @@ nav > ul > li > a:hover,
 }
 
 .background-graph-paper {
-  height: 15%;
+  height: 25%;
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%2394a3b8' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
@@ -224,7 +225,15 @@ nav > ul > li > a:hover,
   max-width: 300px;
   height: auto;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 2px;
   -webkit-box-reflect: right 1em
     linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+}
+
+#master-ace-bizmarkie-puppet {
+  border-radius: 2px;
+  -webkit-box-reflect: right 1em
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+
+  object-fit: cover;
 }
