--- a/css/home.css
+++ b/css/home.css
@@ -18,7 +18,7 @@ body {
 header {
   display: flex;
   padding: 2em 4em 4em 4em;
-  background-color: white;
+  background-color: f9fafb;
   grid-area: header;
 }
 
@@ -118,7 +118,7 @@ nav > ul > li > a:hover,
   /* Chrome 10-25, Safari 5.1-6 */
   /* background: -webkit-linear-gradient(to right, #fb923c, #ededed); */
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, #e2b303, #efefef);
+  background: linear-gradient(to right, #e2b303, #f9fafb);
 }
 
 #account {
