--- a/css/home.css
+++ b/css/home.css
@@ -75,13 +75,12 @@ nav > ul > li > a.active,
 
 nav > ul > li > a.active:after,
 #account > a.active:after {
-  /* background: #b0a49a; */
   background: var(--brand-5);
   content: "";
   display: block;
   height: 3px;
   margin: 10px auto 0;
-  width: 3rem;
+  width: var(--size-8);
 }
 
 nav > ul > li > a:hover,
@@ -125,7 +124,6 @@ nav > ul > li > a:hover,
   font-size: var(--font-size-3);
   text-decoration: none;
   font-weight: var(--font-weight-7);
-  /* letter-spacing: var(--font-letterspacing-4); */
   color: var(--gray-9);
   font-family: monospace;
 }
@@ -141,12 +139,10 @@ nav > ul > li > a:hover,
   background: var(--brand-5);
   background: linear-gradient(to right, var(--brand-5), var(--gray-0));
   background: -webkit-linear-gradient(to right, var(--brand-5)), var(--gray-0));
-
-
 }
 
 .gradient-accent h5 {
-  color: var(--gray-6)
+  color: var(--gray-6);
 }
 
 .background-mixtapes {
@@ -167,40 +163,39 @@ nav > ul > li > a:hover,
   left: 50%;
   transform: translate(-50%, -50%);
   color: var(--gray-0);
-  width: 26rem;
+  width: var(--size-14);
   padding: 0em 0em;
   font-size: xx-large;
-  font-weight: 800;
+  font-weight: var(--font-weight-7);
   font-family: monospace;
-  line-height: 1.8em;
+  line-height: var(--font-lineheight-3);
   text-transform: uppercase;
 }
 
 .background-graph-paper {
   height: 25%;
-  background-color: #f9fafb;
+  background-color: var(--gray-1);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%2394a3b8' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .text-image {
   display: flex;
-  gap: 10rem;
+  gap: var(--size-12);
 }
 
 #ultra-image {
   width: 100%;
-
   max-width: 300px;
   height: auto;
   object-fit: cover;
-  border-radius: 2px;
-  -webkit-box-reflect: right 1em
-    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+  border-radius: var(--size-2);
+  -webkit-box-reflect: right var(--size-3)
+    linear-gradient(to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.4));
 }
 
 #master-ace-bizmarkie-puppet {
-  border-radius: 2px;
+  border-radius: var(--size-2);
   object-fit: cover;
-  -webkit-box-reflect: right 1em
-    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+  -webkit-box-reflect: right var(--size-3)
+    linear-gradient(to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.4));
 }
