--- a/css/home.css
+++ b/css/home.css
@@ -39,7 +39,7 @@ section {
 footer {
   height: 10rem;
   background-color: var(--gray-2);
-  /* color: var(--gray-7); */
+  background-color: var(--gray-3);
   padding: var(--size-3) var(--size-9);
   grid-area: footer;
 }
