--- a/css/home.css
+++ b/css/home.css
@@ -18,6 +18,7 @@ body {
   font-family: var(--font-sans);
   font-size: var(--font-size-1);
   color: var(--gray-7);
+  font-weight: var(--font-weight-4);
   margin: 0;
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -46,6 +47,10 @@ footer {
   color: var(--gray-3);
   padding: var(--size-3) var(--size-9);
   grid-area: footer;
+}
+
+h1, h2, h3, h4, h5, h6{
+  font-weight: var(--font-weight-6);
 }
 
 p {
