--- a/css/home.css
+++ b/css/home.css
@@ -59,11 +59,13 @@ h4,
 h5,
 h6 {
   font-weight: var(--font-weight-6);
+  font-size: var(--font-size-fluid-1);
 }
 
 p {
-  width: 60ch;
+  width: 32ch;
   line-height: var(--font-lineheight-3);
+  text-align: left;
 }
 
 nav {
@@ -150,9 +152,9 @@ nav > ul > li > a:hover,
 }
 
 .gradient-accent {
-  display: grid;
-  grid-template-columns: 1fr;
-  padding: var(--size-10) var(--size-14);
+  /* display: grid;
+  grid-template-columns: 1fr; */
+  /* padding: var(--size-10) var(--size-14); */
   background: var(--brand-5);
   background: -webkit-linear-gradient(to right, var(--brand-5), var(--brand-4));
   background: linear-gradient(to right, var(--brand-5), var(--brand-4));
@@ -166,7 +168,7 @@ nav > ul > li > a:hover,
   background-image: linear-gradient(hsla(0, 0%, 0%, 0.2), rgba(0, 0, 0, 0.2)),
     url("/images/mixtapes.jpg");
   height: 20%;
-  background-position: center;
+  ÷background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -201,12 +203,12 @@ nav > ul > li > a:hover,
 
 .text-image {
   display: flex;
-  gap: var(--size-12);
+  flex-wrap: wrap;
+  gap: var(--size-6);
 }
 
 #ultra-image {
-  width: 100%;
-  max-width: 300px;
+  max-width: 100%;
   height: auto;
   object-fit: cover;
   border-radius: var(--size-2);
@@ -215,8 +217,10 @@ nav > ul > li > a:hover,
 }
 
 #master-ace-bizmarkie-puppet {
-  border-radius: var(--size-2);
+  max-width: 100%;
+  height: auto;
   object-fit: cover;
+  border-radius: var(--size-2);
   -webkit-box-reflect: right var(--size-3)
     linear-gradient(to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.4));
 }
