--- a/css/home.css
+++ b/css/home.css
@@ -70,6 +70,7 @@ p {
 
 nav {
   flex: 5;
+  display: none;
 }
 
 nav > ul {
@@ -107,6 +108,12 @@ nav > ul > li > a:hover,
   text-decoration: underline;
   color: var(--gray-7);
   font-weight: var(--font-weight-5);
+}
+
+@media (min-width: 35.5rem) {
+  nav {
+    display: block;
+  }
 }
 
 #logo {
@@ -168,7 +175,6 @@ nav > ul > li > a:hover,
   background-image: linear-gradient(hsla(0, 0%, 0%, 0.2), rgba(0, 0, 0, 0.2)),
     url("/images/mixtapes.jpg");
   min-height: 20%;
-
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
