--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,8 @@ section.home {
 
 footer {
   height: 10rem;
-  background-color: var(--brand-5);
+  background-color: var(--bronco-950);
+  background-color: var(--gray-9);
   color: var(--gray-3);
   padding: var(--size-3) var(--size-9);
   grid-area: footer;
@@ -94,7 +95,7 @@ h6 {
 
 h1 {
   margin: var(--size-7) 0;
-  color: var(--gray-5);
+  color: var(--gray-6);
 }
 
 p {
@@ -340,10 +341,12 @@ article {
 
 .bg-neutral {
   background-color: #f6f8fc;
+  background-color: var(--bronco-100);
+
 }
 
 .bg-light {
-  background-color: white;
+  background-color: var(--gray-0);
 }
 
 .feed {
