--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
 @import "https://unpkg.com/open-props@1.5.11/gray.min.css";
 @import "https://unpkg.com/open-props@1.5.11/borders.min.css";
 
-
 :where(html) {
   --brand-4: #ddd9d4;
   --brand-5: #b0a59b;
@@ -47,6 +46,8 @@ body {
   font-family: var(--font-sans);
   font-size: var(--font-size-1);
   font-weight: var(--font-weight-3);
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 
   color: var(--gray-7);
   margin: 0;
@@ -95,16 +96,36 @@ h6 {
   color: var(--gray-7);
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 h1 {
   margin: var(--size-7) 0;
   color: var(--gray-6);
 }
 
 p {
-  max-width: var(--size-content-2);
   line-height: var(--font-lineheight-3);
   text-align: left;
   margin-top: var(--size-3);
+}
+
+.home p {
+  max-width: var(--size-content-2);
+}
+
+.post h1{
+  color: var(--gray-7);
+}
+.post p{
+  max-width: var(--size-content-3);
+  font-size: var(--font-size-fluid-1);
 }
 
 nav {
@@ -325,6 +346,12 @@ article {
   flex-direction: column;
 }
 
+.post {
+  padding: var(--size-7) var(--size-7);
+  border-radius: var(--radius-3);
+  margin-bottom: var(--size-9);
+}
+
 .feed .split {
   display: flex;
   flex-direction: row;
@@ -344,7 +371,6 @@ article {
 .bg-neutral {
   background-color: #f6f8fc;
   background-color: var(--bronco-100);
-
 }
 
 .bg-light {
