--- a/css/styles.css
+++ b/css/styles.css
@@ -120,12 +120,22 @@ p {
   max-width: var(--size-content-2);
 }
 
-.post h1{
+.post h1 {
   color: var(--gray-7);
 }
-.post p{
-  max-width: var(--size-content-3);
-  font-size: var(--font-size-fluid-1);
+
+.post h2 {
+  font-size: var(--font-size-2);
+}
+
+
+.post a{
+  text-decoration: underline;
+}
+.post p {
+  /* max-width: var(--size-content-3); */
+  /* font-size: var(--font-size-2); */
+  /* font-size: var(--font-size-fluid-1); */
 }
 
 nav {
@@ -347,7 +357,7 @@ article {
 }
 
 .post {
-  padding: var(--size-7) var(--size-7);
+  padding: var(--size-7) var(--size-11);
   border-radius: var(--radius-3);
   margin-bottom: var(--size-9);
 }
