--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,10 @@ p {
   margin-top: var(--size-3);
 }
 
+img {
+  border-radius: var(--size-2);
+}
+
 .home p {
   max-width: var(--size-content-2);
 }
@@ -128,8 +132,7 @@ p {
   font-size: var(--font-size-2);
 }
 
-
-.post a{
+.post a {
   text-decoration: underline;
 }
 .post p {
