--- a/css/styles.css
+++ b/css/styles.css
@@ -44,12 +44,11 @@ body {
 
 body {
   font-family: var(--font-sans);
-  font-size: var(--font-size-1);
-  font-weight: var(--font-weight-3);
+  font-size: var(--font-size-2);
+  font-weight: var(--font-weight-4);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-
-  color: var(--gray-7);
+  color: var(--gray-9);
   margin: 0;
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -88,12 +87,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: var(--font-weight-4);
+  font-weight: var(--font-weight-7);
   font-size: var(--font-size-3);
   line-height: var(--font-lineheight-00);
-  margin: var(--size-3) 0;
+  margin: var(--size-7) 0 var(--size-7) 0;
   display: flex;
-  color: var(--gray-7);
+  color: var(--gray-11);
 }
 
 a {
@@ -105,7 +104,7 @@ a:hover {
   text-decoration: underline;
 }
 
-h1 {
+.feed h1 {
   margin: var(--size-7) 0;
   color: var(--gray-6);
 }
@@ -120,25 +119,33 @@ img {
   border-radius: var(--size-2);
 }
 
+li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 .home p {
   max-width: var(--size-content-2);
 }
 
 .post h1 {
-  color: var(--gray-7);
-}
-
-.post h2 {
-  font-size: var(--font-size-2);
+  font-size: var(--font-size-5);
+  font-weight: var(--font-weight-7);
 }
 
 .post a {
   text-decoration: underline;
+
+  font-weight: var(--font-weight-6);
 }
-.post p {
-  /* max-width: var(--size-content-3); */
-  /* font-size: var(--font-size-2); */
-  /* font-size: var(--font-size-fluid-1); */
+
+
+.post li {
+  padding: var(--size-3);
+
+  border-left: 4px solid var(--bronco-400);
+  /* background-color: var(--bronco-100); */
 }
 
 nav {
