--- a/css/styles.css
+++ b/css/styles.css
@@ -95,9 +95,12 @@ h6 {
   color: var(--gray-11);
 }
 
+.home h3 {
+  font-size: var(--font-size-4);
+}
+
 .feed h2 {
   margin: var(--size-2) 0 var(--size-3) 0;
-
 }
 
 ul {
