--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,10 @@ h6 {
   color: var(--gray-11);
 }
 
+.if-you h4 {
+  margin: var(--size-2) 0 var(--size-2) 0;
+}
+
 .home h3 {
   font-size: var(--font-size-4);
 }
@@ -448,8 +452,34 @@ article {
   font-size: var(--font-size-0);
 }
 
-.if-you li {
+.if-you em{
+  display: inline-block;
+  margin-right: var(--size-3);
+  margin-bottom: var(--size-3);
+}
+
+.if-you-list {
+  margin: var(--size-4) 0 var(--size-4) 0;
+}
+.if-you-list li {
   list-style: outside none;
-  /* font-size: var(--font-size-1); */
   padding-bottom: var(--size-2);
+}
+
+.link-button {
+  display: inline-block;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  /*
+    border: solid 1px var(--bronco-500);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2); */
+  background: var(--bronco-400);
+  color: var(--gray-0);
+  padding: var(--size-3) var(--size-7);
+  text-decoration: none;
+  font-weight: var(--font-weight-7);
 }
